# loom

./: .gitignore  LICENSE  README.md  fuzz_tests.py  loom.py  loom_approval.py  loom_bounds.py  loom_checker.py  loom_cli.py  loom_codegen.py  loom_evidence.py  loom_executor.py  loom_frontend.py  loom_gate.py  loom_observer.py  loom_parse.py  loom_provenance.py  loom_recursion.py  loom_runtime.py  loom_wasm.py  pyproject.toml  run_tests.py  verify_docs_parity.py
.github/: FUNDING.yml
docs/: action_binding_v0.md  action_capsule_v0.md  action_semantics_v0.md  asm_v0.md  call_budget_frame_v1.md  compiler_provenance_v1.md  contextual_value_bounds_v2.md  demo_loom_60s.md  gate_ci_evidence_v1.md  gate_compiler_evidence_v1.md  gate_compiler_evidence_v2.md  gate_compiler_receipt_v3.md  gate_compiler_receipt_v4.md  gate_executor_v1.md  gate_macos_native_issuer_contract.md  gate_manifest_v1.md  gate_native_issuer_handoff.md  gate_observer_v1.md  gate_operator_approval_v1.md  gate_operator_key_storage.md  gate_operator_real_workflow.md  gate_policy_v1.md  gate_process_cli_lifecycle.md  gate_receipt_v1.md  gate_wasm_artifact_v1.md  i31_semantics.md  index.html  loom.py  meter_frame_v1.md  module_boundaries.md  play.html  proven_value_bounds_v1.md  published_bundle_workflow.md  quantitative_recurrence_summary_v1.md  quickstart.md  recursive_descent_certificate_v1.md  release_readiness.md  secret_credential_policy.md  wasm_abi_v1.md  wasm_quantity_mediation.md  (+3 more)
examples/: bounded_ai_action_manifest.json  demo.loom  first.loom  flagship.loom  forbid.loom  gated.loom  native_issuer.py  (+9 more)
(+1 files in other folders)
